--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^2.2.3",
     "@hookform/resolvers": "^5.0.1",
     "axios": "^1.8.4",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.510.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
+    "recharts": "^2.15.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
